<resources>
    <string name="app_name">Album</string>
    <string name="new_album">New Album</string>
    <string name="setting">Settings</string>
    <string name="photos">PHOTOS</string>
    <string name="albums">ALBUMS</string>
    <string name="privacy">PRIVACY</string>
    <string name="gallery">Gallery</string>
    <string name="switch_layout_item">switch_layout_item</string>
    <string name="filter_item">Filter</string>
    <string name="camera_item">camera_item</string>

    <!-- Preference Titles -->
    <string name="choose_photo_header">Choose photo</string>
    <string name="examine_header">Examine</string>
    <string name="send_header">Send</string>


    <!-- Choose photo Preferences -->
    <string name="choose_photo_title">Choose the best photo</string>
    <string name="choose_photo_describe">The system will analyze similar photos and mark the best
        ones for you. Turn off this feature to remove marks from photos</string>

    <!-- Examine Preferences -->
    <string name="view_title">View hidden albums</string>
    <string name="view_describe">View and manage hidden albums</string>
    <string name="showtime_title">Showtime</string>
    <string name="repeat">Repeat slides multiple times</string>

    <!-- Send Preferences -->
    <string name="share_title">Secure sharing</string>
    <string name="change_title">Convert HEIF to JPEG when sending</string>
    <string name="change_describe">Convert HEIF images to JPEG to ensure compatibility</string>


    /////////////////////////////////////////

    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="filter">Filter</string>
    <string name="crop">Crop</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="flip">Flip</string>
    <string name="rotate">Rotate</string>
    <string name="paint">Paint</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and lock screen</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="all">All</string>
    <string name="DELETE">DELETE</string>

    <string name="delete_notification">Delete %d %s?</string>

    <string name="language_cat">App Language</string>
    <string name="language_pref">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="hint_description">Enter the description of this image</string>
    <string name="select">Select</string>
    <string name="colorpicker_title">ColorPicker Dialog</string>
    <string name="choose_color">Choose Color</string>
    <string name="secs_3">3 seconds</string>
    <string name="secs_5">5 seconds</string>
    <string name="secs_10">10 seconds</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="custom">Custom</string>
    <string name="confirm_delete">Are you sure you want to delete these albums?
        The photos will not be deleted</string>
    <string name="add_to_album">Add to album</string>
    <string name="add_to_Fav">Add to Favorites</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="blur" translatable="false">Blur</string>
    <string name="eraser">Eraser</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    //filter
    <string name="filter_brightness">Brightness</string>
    <string name="filter_tint">Tint</string>
    <string name="filter_corner">Corner</string>
    //sticker
    <string name="stickers">Stickers</string>
    <string name="text_stickers">Text</string>
    <string name="font">Font</string>
    <string name="font_color">Font Color</string>

    <string name="description">Description</string>
    <string name="image_name">Image name</string>
    <string name="last_modified">Last modified date</string>
    <string name="details_uppercase">DETAILS</string>
    <string name="rename_uppercase">RENAME</string>
    <string name="hint_rename">Enter image name</string>
    <string name="file_size">Size</string>

    <string name="err_empty_name">Image name can not be empty</string>
    <string name="err_exist_name">This name already exists</string>
    <string name="err_unknown_rename">An error occurs while renaming image</string>
    <string name="err_unknown_description">An error occurs while editing description</string>
    <string name="err_invalid_name">Invalid name</string>
    <string name="albums_name">Album\'s name</string>
    <string name="create_album">Create Album</string>
    <string name="confirm">Confirm</string>

    <string name="number_selected_items">%d selected %s</string>
    <string name="pick_done">Done</string>
    <string name="on_this_day">ON THIS DAY</string>
    <string name="blur">Blur</string>

</resources>