<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <PreferenceCategory app:title="@string/choose_photo_header">-->
    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="choose"-->
    <!--            app:title="@string/choose_photo_title"-->
    <!--            app:summary="@string/choose_photo_describe"/>-->

    <!--    </PreferenceCategory>-->

    <!--    Account
            Hidden album
            Theme choosing
            Bin
            About app -> Privacy & App's information -->

    <PreferenceCategory app:title="@string/examine_header">

        <EditTextPreference
            app:key="hidden_view"
            app:title="@string/view_title"
            app:summary="@string/view_describe"/>

        <ListPreference
            app:defaultValue="showtime"
            app:entries="@array/showtime_entries"
            app:entryValues="@array/showtime_values"
            app:key="reply"
            app:title="@string/showtime_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="repeat"
            app:title="@string/repeat" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/send_header">

        <SwitchPreferenceCompat
            app:key="share"
            app:title="@string/share_title" />

        <SwitchPreferenceCompat
            app:key="change"
            app:title="@string/change_title"
            app:summary="@string/change_describe"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/language_cat">

        <ListPreference
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_codes"
            app:key="language"
            app:title="@string/language_pref"
            app:defaultValue="en"
            app:summary="%s"/>

    </PreferenceCategory>
</PreferenceScreen>