<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/new_album"
        android:id="@+id/menu_newAlbum" />
    <item
        android:title="@string/setting"
        android:id="@+id/menu_setting"/>

    <item
        android:title="Choose Color"
        android:id="@+id/menu_choose_color"/>

    <item android:id="@+id/filter"
        android:title="@string/filter_item"
        android:icon="@drawable/ic_filter"
        app:showAsAction="never" />

    <item android:id="@+id/action_switch_layout"
        android:title="@string/switch_layout_item"
        android:icon="@drawable/ic_linear_layout"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/camera"
        android:title="@string/camera_item"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always" />

</menu>