<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_uppercase"
        android:textSize="19sp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:letterSpacing="0.08"/>
    <TextView
        android:id="@+id/image_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_name"
        android:paddingHorizontal="25dp"
        android:paddingTop ="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/image_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingTop="5dp" />
    <TextView
        android:id="@+id/last_modified_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_modified"
        android:paddingHorizontal="25dp"
        android:paddingTop ="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/last_modified_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingTop="5dp"/>
    <TextView
        android:id="@+id/size_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_size"
        android:paddingHorizontal="25dp"
        android:paddingTop ="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingTop="5dp"/>
    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:paddingHorizontal="25dp"
        android:paddingTop ="15dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:textSize="15sp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginVertical="8dp">
        <Button
            android:id="@+id/cancel_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:background="@color/trans"
            android:textColor="?attr/colorPrimary"/>
        <Button
            android:id="@+id/save_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/save"
            android:background="@color/trans"
            android:textColor="?attr/colorPrimary"/>
    </LinearLayout>


</LinearLayout>