<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rename_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_uppercase"
        android:textSize="19sp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:letterSpacing="0.08"/>
    <EditText
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rename"
        android:textSize="15sp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginVertical="8dp">
        <Button
            android:id="@+id/cancel_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:background="@color/trans"
            android:textColor="?attr/colorPrimary"/>
        <Button
            android:id="@+id/save_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/save"
            android:background="@color/trans"
            android:textColor="?attr/colorPrimary"/>
    </LinearLayout>


</LinearLayout>