<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="25dp"
    android:minWidth="400dp"
    android:background="@drawable/mydialog">

    <TextView
        android:id="@+id/add_to_album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_album"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/add_to_album_edt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/albums_name"
        android:inputType="text"
        android:background="@drawable/my_edittext"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/add_to_album_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/mybutton"
            android:textSize="18dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/add_to_album_ok"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/mybutton"
            android:textSize="18dp"
            android:text="@string/label_ok"
            android:enabled="false" />
    </LinearLayout>

</LinearLayout>